--- a/templates/head.html
+++ b/templates/head.html
@@ -9,8 +9,8 @@
 	<link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon.png') }}">
 	{%- block additional_css -%}{%- endblock -%}
 	<link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
-	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+	<!--<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">-->
 	<script src="{{ url_for('static', filename='bower_components/platform/platform.js') }}"></script>
 	<script src="{{ url_for('static', filename='bower_components/polymer/polymer.js') }}"></script>
-	<link rel="import" href="{{ url_for('static', filename='bower_components/github-gist/github-gist.html') }}">
+	<!--<link rel="import" href="{{ url_for('static', filename='bower_components/github-gist/github-gist.html') }}">-->
 </head>
