--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,9 @@
 										</div>
 										<div class="content no-lightbox">
 											{%- if post['preview'] -%}
-												{{ post['preview']|markdown }}
+												{{ post['preview']}}
 											{%- else -%}
-												{{ post['body']|markdown }}
+												{{ post['body']}}
 											{%- endif -%}
 										</div>
 										<div class="infopanel">
@@ -70,8 +70,8 @@
 		</div>
 		{%- include 'footer.html' -%}
 		{%- block scripts -%}
-			<script src="//codeorigin.jquery.com/jquery-2.0.3.min.js"></script>
-			<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+			<script src="/static/js/jquery-2.0.3.min.js"></script>
+			<script src="/static/js/bootstrap.min.js"></script>
 			{%- block additional_js -%}{%- endblock -%}
 			<script src="{{ url_for('static', filename='js/main.js') }}"></script>
 		{%- endblock -%}
