--- a/templates/preview.html
+++ b/templates/preview.html
@@ -21,14 +21,14 @@
 							<!-- AddThis Button END -->
 				        </div>
 					</div>
-					<div class="content article">
-						{{ post['preview']|markdown }}
-						{{ post['body']|markdown }}
+					<div class="content article" id=2>
+						{{ post['preview']}}
+						{{ post['body']}}
 					</div>
 					<div class="infopanel">
 						<div class="tags">
-							<i>tags:</i>
 							{%- if post['tags'] -%}
+								<i>tags:</i>
 								{%- for tag in post['tags'] -%}
 									&nbsp;<a href="/tag/{{ tag }}">{{ tag }}</a>
 								{%- endfor -%}
