do not escap body with preview page

--- a/templates/preview.html
+++ b/templates/preview.html
@@ -23,7 +23,7 @@
 					</div>
 					<div class="content article" id=2>
 						{{ post['preview']}}
-						{{ post['body']}}
+						{{ post['body']|safe}}
 					</div>
 					<div class="infopanel">
 						<div class="tags">
