--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -1,6 +1,7 @@
 {%- extends 'index.html' -%}
 {%- block body -%}
 	{% if session.get('post-preview', None) %}
+		{% set post_permalink = session['post-preview'].get('permalink', None) %}
 		{% set post_title = session['post-preview'].get('title', None) %}
 		{% set post_preview = session['post-preview'].get('preview', None) %}
 		{% set post_body = session['post-preview'].get('body', None) %}
@@ -9,6 +10,7 @@
 			{% set post_tags = ','.join(tags) %}
 		{% endif %}
 	{% else %}
+		{% set post_permalink = post.get('permalink') %}
 		{% set post_title = post.get('title') %}
 		{% set post_preview = post.get('preview') %}
 		{% set post_body = post.get('body') %}
@@ -31,6 +33,12 @@
 						{%- endif -%}
 					{%- endwith -%}
 					<form id="post-form" role="form" method="post" action="{{ url_for('new_post') }}">
+						<div class="form-group {% if error and error_type == 'validate' %}has-error{% endif %}">
+							{%- if error and error_type == 'validate' -%}
+								<label class="control-label" for="post-permalink">Required field</label>
+							{%- endif -%}
+						    <input type="text" class="form-control" name="post-permalink" id="post-permalink" placeholder="Post permalink" required value="{{ post_permalink| safe }}">
+					    </div>
 						<div class="form-group {% if error and error_type == 'validate' %}has-error{% endif %}">
 							{%- if error and error_type == 'validate' -%}
 								<label class="control-label" for="post-title">Required field</label>
