--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 									<div class="col-lg-8">
 										<div class="page-header">
 											<h1><a href="{{ url_for('single_post', permalink=post['permalink']) }}">{{ post['title'] | safe }}</a></h1>
-											<p><span class="icon-time">&nbsp;</span><i>Posted on {{ post['date'] |formatdate }} by {{ post['author'] }}</i></p>
+											<p><span class="icon-time">&nbsp;</span><i>发布于{{ post['date'] |formatdate }} </i></p>
 										</div>
 										<div class="content no-lightbox">
 											{%- if post['preview'] -%}
@@ -23,14 +23,14 @@
 											{%- endif -%}
 										</div>
 										<div class="infopanel">
-											<div class="tags">
-												<li class="icon-tags" title="tags"></li>
-												{%- if post['tags'] -%}
+											{%- if post['tags'] -%}
+												<div class="tags">
+													<i>标签:</i>
 													{%- for tag in post['tags'] -%}
 														&nbsp;<a href="{{ url_for('posts_by_tag', tag=tag) }}">{{ tag }}</a>
 													{%- endfor -%}
-												{%- endif -%}
-											</div>
+												</div>
+											{%- endif -%}
 										</div>
 									</div>
 								</div>
