--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,11 +1,11 @@
 <div class="navbar navbar-default navbar-fixed-top">
 	<div class="navbar-header">
 		<ul class="nav navbar-nav">
-			<li><a href="{{ url_for('index') }}" class="navbar-brand">Home</a></li>
+			<li><a href="{{ url_for('index') }}" class="navbar-brand">首页</a></li>
+			<li><a href="{{ url_for('single_post', permalink='about-me') }}">关于</a></li>
 		{% if session.user %}
-			<li><a href="{{ url_for('logout') }}">Logout</a></li>
+			<li><a href="{{ url_for('logout') }}">退出</a></li>
 		{% else %}
-			<li><a href="{{ url_for('login') }}">Login</a></li>
 		{% endif %}
 		</ul>
 
