--- a/templates/single_post.html
+++ b/templates/single_post.html
@@ -7,7 +7,7 @@
 				<div class="col-lg-8">
 					<div class="page-header">
 						<h1>{{ post['title'] | safe }}</h1>
-						<p><span class="icon-time">&nbsp;</span><i>Posted on {{ post['date'] |formatdate }} by {{ post['author'] }}</i></p>
+						<p><span class="icon-time">&nbsp;</span><i>发布于{{ post['date'] |formatdate }}</i></p>
 						<div class="social row-fluid">
 					        <!-- AddThis Button BEGIN 
 							<div class="addthis_toolbox addthis_default_style addthis_16x16_style">
@@ -28,7 +28,7 @@
 					<div class="infopanel">
 						{%- if post['tags'] -%}
 							<div class="tags">
-								<i>tags:</i>
+								<i>标签:</i>
 								{%- for tag in post['tags'] -%}
 									&nbsp;<a href="{{ url_for('posts_by_tag', tag=tag) }}">{{ tag }}</a>
 								{%- endfor -%}
