add Chinese  ICP registration info support

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -30,6 +30,10 @@
 	                        <label class="control-label" for="blog-description">Blog description</label>
                             <input type="text" class="form-control" name="blog-description" id="blog-description" placeholder="Blog Description" value="{{ default_settings['BLOG_DESCRIPTION'] }}" autocomplete="off">
                         </div>
+	                    <div class="form-group">
+	                        <label class="control-label" for="blog-beian">备案</label>
+                            <input type="text" class="form-control" name="blog-beian" id="blog-beian" placeholder="备案号" value="{{ default_settings['BLOG_BEIAN'] }}" autocomplete="off">
+                        </div>
                         <div class="form-group {% if error and error_type == 'validate' %}has-error{% endif %}">
                             {%- if error and error_type == 'validate' -%}
                                 <label class="control-label" for="blog-perpage">Required field</label>
