--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,7 @@
 <footer>
 	<div class="container">
-		<p><a data-target="_blank" href="https://github.com/kailin4u/flask-blog">Source code</a> is licensed under the <a data-target="_blank" href="http://choosealicense.com/licenses/mit">MIT</a> license.</p>
+		<p>Copyright © 2016 <a data-target="_blank" href="/"> {{ default_settings['BLOG_TITLE'] }}</a>{%- if default_settings['BLOG_BEIAN'] -%}<a> </a><a data-target="_blank" href="http://www.miitbeian.gov.cn/"> {{ default_settings['BLOG_BEIAN'] }}</a>{%- endif -%}</p>
+		<p><a data-target="_blank" href="https://github.com/kailin4u/flask-blog">本站源码</a> 遵循<a data-target="_blank" href="http://choosealicense.com/licenses/mit">MIT</a> 协议.</p>
 	</div>
 </footer>
 
